[package]
name = "EDEA-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.4"
prost = "0.13"
tokio = { version = "1.46.1", features = ["full"] }
tonic = "0.13.1"
tonic-reflection = "0.13.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tonic-web = "0.13.1"
tower-http = { version = "0.6.6", features = ["cors"] }

[build-dependencies]
tonic-build = "0.13.1"
